[project]
name = "career-copilot-backend"
version = "0.1.0"
description = "Career-Copilot Backend - Resume Parser API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "python-dotenv>=1.0.0",
    "dashscope>=1.20.0",
    "modelscope>=1.23.0",
    "openai>=1.68.0",
    "sentence-transformers>=3.0.0",
    "python-magic>=0.4.27",
    "zai-sdk>=0.2.2",
    "zvec==0.2.0; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
